@@ -21,7 +21,7 @@
 
 (Expert level, 18 scenarios.)"
     icon=units/orcs/ruler.png~RC(magenta>red)
-    image=data/campaigns/Son_Of_The_Black_Eye/images/portraits/kapoue.png
+    image=data/campaigns/Son_Of_The_Black_Eye/images/portraits/kapoue.png~SCALE(205,205)
 
     [about]
         title = _ "Campaign Design"
